--- a/tables.html
+++ b/tables.html
@@ -79,7 +79,7 @@
             <tr>
                 <td rowspan="2">Monday</td>
                 <td rowspan="2">8:00 a.m.</td>
-                <td rowspan="2">5.00 p.m.</td>
+                <td rowspan="2">5.00 a.m.</td>
                 <td>Introduction to XML</td>
             </tr>
             <tr>
